--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,11 +1,11 @@
 backend:
   name: git-gateway
   branch: main
-  identity_url: https://reema-blogs.netlify.app/.netlify/identity
-  gateway_url: https://reema-blogs.netlify.app/.netlify/git
+  identity_url: https://reema-roy-cms.netlify.app/.netlify/identity
+  gateway_url: https://reema-roy-cms.netlify.app/.netlify/git
 
-site_url: https://reema-blogs.netlify.app
-display_url: https://reema-blogs.netlify.app
+site_url: https://reema-roy-cms.netlify.app
+display_url: https://reema-roy-cms.netlify.app
 
 media_folder: "assets/uploads/blog"
 public_folder: "/assets/uploads/blog"
