--- a/admin/config.yml
+++ b/admin/config.yml
@@ -2,6 +2,8 @@ backend:
   name: github
   repo: iamreemaroy/Reema-Roy
   branch: main
+  auth_type: implicit
+  app_id: Ov23lizJIKB26zvs3eF9
 
 media_folder: "assets/blog/img"
 public_folder: "/assets/blog/img"
