--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -1,7 +1,7 @@
 title: BizzNist Blog
 description: IT, websites, SEO, and growth — by Reema Roy.
-url: "https://www.reemaroy.com"
-baseurl: ""
+url: "https://iamreemaroy.github.io"
+baseurl: "/Reema-Roy"
 
 permalink: /blog/:title/
 
