--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -3,7 +3,7 @@ description: IT, websites, SEO, and growth — by Reema Roy.
 url: "https://iamreemaroy.github.io"
 baseurl: "/Reema-Roy"
 
-permalink: /blog/:title/
+permalink: /blog/:slug/
 
 plugins:
   - jekyll-seo-tag
